[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/sound-fx/hit.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/projectiles/particles/BulletParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/projectiles/materials/RadiantBulletMaterial.tres" type="Material" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.19544
height = 4.07348

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.619355, 1 )
colors = PoolColorArray( 1, 0.728241, 0.464844, 1, 0.994659, 1, 0.316406, 1, 0.987097, 0.987097, 0.987097, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )
width = 10

[node name="Bullet" type="Area2D" groups=[
"projectile",
]]
script = ExtResource( 1 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.80271, 7.46631 )
texture = SubResource( 3 )

[node name="HitEffectPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="DespawnTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="BulletParticles" parent="." instance=ExtResource( 3 )]
material = ExtResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
